Pull request #480: Jdzubak MCA-4450 Livechat Widget API
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4450_lc_widget_api to master

Squashed commit of the following:

commit e9f9cb06964f63607df3f4945f994ab1048f4b43
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Mar 11 14:09:13 2025 +0100

    MCA-4477 Review fixes

commit ce2c94e77f05e07d1b23db11a81b9df387bd264e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 10 15:06:02 2025 +0100

    MCA-4477 Few improvements

commit f285f6813ffc506a339fef61583ac41b71029ac1
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 10 14:01:12 2025 +0100

    MCA-4477 Null safe

commit a1590d5862a888cd23d0db6f545b92291d738562
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Mar 7 16:17:43 2025 +0100

    MCA-4477 Little update

commit 57f278c19861bb4c1ef5553ce6066847d8dfc374
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Fri Mar 7 10:18:02 2025 +0100

    MCA-4450 Doco review updates

commit 1d8d1f04d349b6de94f1859f80a50d53d1a59bc3
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 5 16:34:42 2025 +0100

    MCA-4450 Little updates

commit ceb1c087bb1f25adcfcde21b7edfa7d60fe4f0a7
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Mar 5 14:43:20 2025 +0100

    MCA-4478 LivechatWidgetApi used in InAppChatView. InAppChat language refactored. Deprecation of various InAppChat related functions. Gradle dependencies versions synced across modules.

commit 35a0c20b3dfff16d71d0cf32d3f0bc2752e55206
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Mar 3 15:35:20 2025 +0100

    MCA-4477 Livechat Widget layer logically separated from InAppChat. LivechatWidgetApi implementation.

commit 91958d65d9d0b34930c91d14e250bf677c515d65
Merge: 342ae368 64e938e3
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Feb 25 11:25:59 2025 +0100

    Merge remote-tracking branch 'refs/remotes/origin/master' into jdzubak-MCA-4432-lc-widget-api-poc



--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     //Kotlin-Gradle-AGP compatibility matrix https://kotlinlang.org/docs/gradle-configure-project.html#apply-the-plugin
-    ext.mm_kotlinVersion = "1.8.20"
-    ext.mm_gradlePluginVersion = '8.5.2'
+    ext.mm_kotlinVersion = "2.0.21"
+    ext.mm_gradlePluginVersion = "8.5.2"
     ext.mm_desugarJdkVersion = "2.1.4"
 
     repositories {
@@ -35,6 +35,10 @@ ext {
     mm_materialVersion = "1.12.0"
     mm_coreKtxVersion = "1.10.1"
     mm_lifecycleVersion = "2.5.1"
+    mm_junitVersion = "4.13.2"
+    mm_mockitoCoreVersion = "1.10.19"
+    mm_multidexVersion = "2.0.1"
+    mm_coroutinesVersion = "1.9.0"
     mm_version = "$version"
 }
 
@@ -48,8 +52,10 @@ allprojects {
 //It's required to be applied here, to have `subprojects.publish` task available
 subprojects {
     apply plugin: "maven-publish"
-    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
-        kotlinOptions.jvmTarget = "1.8"
+    tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
     }
     afterEvaluate { project ->
         if (project.hasProperty('android')) {
