--- a/infobip-mobile-messaging-api-java/build.gradle
+++ b/infobip-mobile-messaging-api-java/build.gradle
@@ -70,10 +70,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation "commons-codec:commons-codec:1.10"
 
-    testImplementation "junit:junit:4.12"
+    testImplementation "junit:junit:$mm_junitVersion"
     testImplementation "org.assertj:assertj-core:2.3.0"
     testImplementation "org.skyscreamer:jsonassert:1.5.0"
-    testImplementation "org.mockito:mockito-core:1.10.19"
+    testImplementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
 }
 
 ext {
