--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -88,27 +88,27 @@ dependencies {
     }
 
     implementation project(":infobip-mobile-messaging-android-sdk")
-    api project(":infobip-mobile-messaging-android-resources")
     implementation project(":infobip-mobile-messaging-api-java")
+    api project(":infobip-mobile-messaging-android-resources")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$mm_kotlinVersion"
-    implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$mm_coroutinesVersion"
 
+    implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
     implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
     implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
+    implementation 'androidx.exifinterface:exifinterface:1.3.7'
     implementation "com.google.android.material:material:$mm_materialVersion"
-    implementation 'androidx.exifinterface:exifinterface:1.3.6'
+
+    testImplementation project(":infobip-mobile-messaging-android-test")
+    testImplementation "junit:junit:$mm_junitVersion"
+    testImplementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation "junit:junit:4.12"
-    androidTestImplementation "org.mockito:mockito-core:1.10.19"
-    androidTestImplementation 'com.android.support:multidex:2.0.1'
-
-    testImplementation project(":infobip-mobile-messaging-android-test")
-    testImplementation "junit:junit:4.12"
-    testImplementation "org.mockito:mockito-core:1.10.19"
-
+    androidTestImplementation "junit:junit:$mm_junitVersion"
+    androidTestImplementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
+    androidTestImplementation "com.android.support:multidex:$mm_multidexVersion"
 }
 
 android.libraryVariants.all { variant ->
