--- a/infobip-mobile-messaging-android-inbox-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-inbox-sdk/build.gradle
@@ -69,8 +69,8 @@ dependencies {
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'junit:junit:4.13.2'
-    androidTestImplementation "org.mockito:mockito-core:1.10.19"
+    androidTestImplementation "junit:junit:$mm_junitVersion"
+    androidTestImplementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
 }
 
 android.libraryVariants.all { variant ->
