--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -70,14 +70,14 @@ dependencies {
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation "junit:junit:4.12"
-    androidTestImplementation "org.mockito:mockito-core:1.10.19"
+    androidTestImplementation "junit:junit:$mm_junitVersion"
+    androidTestImplementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
     androidTestImplementation('org.skyscreamer:jsonassert:1.5.0') {
         exclude group: "org.json", module: "json"
     }
 
     testImplementation project(":infobip-mobile-messaging-android-test")
-    testImplementation "junit:junit:4.12"
+    testImplementation "junit:junit:$mm_junitVersion"
 
     implementation('com.google.code.gson:gson:2.9.0')
     implementation('androidx.cardview:cardview:1.0.0')
