--- a/infobip-mobile-messaging-android-test/build.gradle
+++ b/infobip-mobile-messaging-android-test/build.gradle
@@ -49,8 +49,8 @@ dependencies {
     implementation "com.crittercism.dexmaker:dexmaker-dx:1.4"
     implementation "com.crittercism.dexmaker:dexmaker:1.4"
     implementation "com.crittercism.dexmaker:dexmaker-mockito:1.4"
-    implementation "org.mockito:mockito-core:1.10.19"
-    implementation "junit:junit:4.12"
+    implementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
+    implementation "junit:junit:$mm_junitVersion"
     api('org.skyscreamer:jsonassert:1.5.0') {
         exclude group: "org.json", module: "json"
     }
