--- a/infobip-rtc-ui/build.gradle
+++ b/infobip-rtc-ui/build.gradle
@@ -72,22 +72,25 @@ dependencies {
         }
     }
 
-    implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
+    implementation project(":infobip-mobile-messaging-android-sdk")
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$mm_kotlinVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$mm_coroutinesVersion"
+
+    implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
+    implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$mm_lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$mm_lifecycleVersion"
     implementation "androidx.fragment:fragment-ktx:1.5.4"
-    implementation project(":infobip-mobile-messaging-android-sdk")
-    implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
-    implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
+    implementation "androidx.work:work-runtime-ktx:2.8.1"
     implementation "com.google.android.material:material:$mm_materialVersion"
+
     api ("com.infobip:infobip-rtc:2.4.3") {
         transitive = true
     }
-    implementation "androidx.work:work-runtime-ktx:2.8.1"
 
-    testImplementation "junit:junit:4.13.2"
+    testImplementation "junit:junit:$mm_junitVersion"
 
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
