--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     testImplementation project(":infobip-mobile-messaging-android-test")
     testImplementation "junit:junit:$mm_junitVersion"
 
+    implementation 'androidx.work:work-runtime:2.8.1'
     implementation('com.google.code.gson:gson:2.9.0')
     implementation('androidx.cardview:cardview:1.0.0')
 }
