Pull request #491: MCA-4542 InfobipRtcUi targets Android 15, updated version of WebRTC library, small maintenance
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3780-update-webrtc to master

Squashed commit of the following:

commit 374b83027bb46fd37d0eb237429d4e3508f827b5
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Apr 24 16:13:41 2025 +0200

    MCA-4542 InfobipRtcUi targets Android 15, updated version of WebRTC library, small maintenance

commit 60d9cacb5b2a858f010aae14849b6eda79f01e52
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Apr 24 16:11:43 2025 +0200

    MCA-4542 InfobipRtcUi targets Android 15, updated version of WebRTC library, small maintenance

commit 8c8b5e636d8878535f859417aa55a9335d3cf6fa
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Apr 24 16:07:50 2025 +0200

    MCA-4542 InfobipRtcUi targets Android 15, updated version of WebRTC library, small maintenance

--- a/infobip-rtc-ui/build.gradle
+++ b/infobip-rtc-ui/build.gradle
@@ -30,7 +30,7 @@ android {
     }
     defaultConfig {
         minSdkVersion mm_minSdkVersion
-        targetSdkVersion 34
+        targetSdkVersion mm_targetSdkVersion
 
         // since AGP 4.1 "VERSION_NAME" is not included anymore to BuildConfig
         // https://issuetracker.google.com/issues/154275579
@@ -82,11 +82,11 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$mm_lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$mm_lifecycleVersion"
-    implementation "androidx.fragment:fragment-ktx:1.5.4"
-    implementation "androidx.work:work-runtime-ktx:2.8.1"
+    implementation "androidx.fragment:fragment-ktx:1.8.6"
+    implementation "androidx.work:work-runtime-ktx:2.10.1"
     implementation "com.google.android.material:material:$mm_materialVersion"
 
-    api ("com.infobip:infobip-rtc:2.4.3") {
+    api ("com.infobip:infobip-rtc:2.5.8") {
         transitive = true
     }
 
