Pull request #492: Mhudicek/MM-7263 JWT Personalization
Merge in MML/infobip-mobile-messaging-android from mhudicek/MM-7263-JWT-Personalization to master

Squashed commit of the following:

commit 015af7e6a9090a27c23271c098c42e082e36d6ab
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Fri May 2 11:51:25 2025 +0200

    Add example JwtSupplier implementation.

commit 1f53908c22f1fc5a50fc1d8254f65609bd6b24ea
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Wed Apr 30 10:44:50 2025 +0200

    Refactoring

commit 6451a52fa1ba21b3d6f6e29f7dc32cc76ec2c2e7
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Tue Apr 29 12:20:03 2025 +0200

    Refactoring

commit 7ccc771f4f8fcdf62db8902426e4f044090baef7
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Tue Apr 29 10:41:56 2025 +0200

    Formatting

commit e1b0738c0cfd80a5e78d03f85b62a6a0caafb36f
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Tue Apr 29 10:11:40 2025 +0200

    Refactor

commit b37ab0817d72a631dc799b8eab30c078d72eb588
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Thu Apr 24 21:27:48 2025 +0200

    Update doc

commit 3214c82371b24d3cd100029a54060b225afdf14d
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Thu Apr 24 19:01:13 2025 +0200

    Revert local test fix

commit 3a0f4357db4627ca5a84210455eeecabfd03a037
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Thu Apr 24 18:29:55 2025 +0200

    Documentation

commit fa662ba265246706d67cdd215f7ef5af3b4a9cea
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Wed Apr 23 10:43:09 2025 +0200

    Appcode header not needed anymore when JWT exists

commit dac9e30cdb6d24349a86933d05540f01a9b4c310
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Tue Apr 22 14:46:04 2025 +0200

    Fix tests

commit 6506730b49f924242f7ecfbc43bb96e4353befd6
Author: mhudicek <Matej.Hudicek@infobip.com>
Date:   Tue Apr 22 11:36:01 2025 +0200

    Add Jwt supplier

--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -132,6 +132,7 @@ dependencies {
     implementation "com.google.android.material:material:$mm_materialVersion"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
+    implementation 'com.nimbusds:nimbus-jose-jwt:9.0.1'
 
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$mm_desugarJdkVersion"
 
