Pull request #501: MCA-4669 InAppChat attachments config
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4669-chat-attachments-config to master

Squashed commit of the following:

commit cbc0599ec07af2252c689e54ed1fb1dbc536a671
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 27 10:40:16 2025 +0200

    MCA-4669 Removed deprecated conversion

commit 9f545b81caba818b33e59ec4ab9add9bdd953468
Merge: 736f1e36 82898502
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue May 27 10:35:06 2025 +0200

    Merge remote-tracking branch 'origin/master' into jdzubak-MCA-4669-chat-attachments-config

commit 736f1e36bc0241cb0acb62a0b4626766d3a6ab7b
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu May 22 13:08:39 2025 +0200

    MCA-4669 InAppChat attachments config

--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,11 @@ ext {
     mm_coreKtxVersion = "1.10.1"
     mm_lifecycleVersion = "2.5.1"
     mm_junitVersion = "4.13.2"
+    mm_androidJunitVersion = "1.2.1"
     mm_mockitoCoreVersion = "1.10.19"
     mm_multidexVersion = "2.0.1"
     mm_coroutinesVersion = "1.9.0"
+    mm_androidTestRunnerVersion = "1.6.2"
     mm_version = "$version"
 }
 
