--- a/infobip-mobile-messaging-android-demo/build.gradle
+++ b/infobip-mobile-messaging-android-demo/build.gradle
@@ -120,7 +120,7 @@ android {
 dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
     testImplementation "junit:junit:$mm_junitVersion"
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation "androidx.test.ext:junit:$mm_androidJunitVersion"
 
     implementation project(":infobip-mobile-messaging-android-chat-sdk")
     implementation project(":infobip-mobile-messaging-android-resources")
