--- a/infobip-mobile-messaging-android-inbox-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-inbox-sdk/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation project(":infobip-mobile-messaging-api-java")
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation "androidx.test.ext:junit:$mm_androidJunitVersion"
     androidTestImplementation "junit:junit:$mm_junitVersion"
     androidTestImplementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
 }
