--- a/infobip-mobile-messaging-android-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-sdk/build.gradle
@@ -69,7 +69,7 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.3.1'
 
     androidTestImplementation project(":infobip-mobile-messaging-android-test")
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation "androidx.test.ext:junit:$mm_androidJunitVersion"
     androidTestImplementation "junit:junit:$mm_junitVersion"
     androidTestImplementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
     androidTestImplementation('org.skyscreamer:jsonassert:1.5.0') {
