--- a/infobip-mobile-messaging-android-test/build.gradle
+++ b/infobip-mobile-messaging-android-test/build.gradle
@@ -44,8 +44,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.9.0'
 
-    implementation 'androidx.test.ext:junit:1.1.3'
-    implementation 'androidx.test:runner:1.6.2'
+    implementation "androidx.test.ext:junit:$mm_androidJunitVersion"
+    implementation "androidx.test:runner:$mm_androidTestRunnerVersion"
     implementation "com.crittercism.dexmaker:dexmaker-dx:1.4"
     implementation "com.crittercism.dexmaker:dexmaker:1.4"
     implementation "com.crittercism.dexmaker:dexmaker-mockito:1.4"
