--- a/infobip-rtc-ui/build.gradle
+++ b/infobip-rtc-ui/build.gradle
@@ -92,7 +92,7 @@ dependencies {
 
     testImplementation "junit:junit:$mm_junitVersion"
 
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.ext:junit:$mm_androidJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
 
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$mm_desugarJdkVersion"
