Pull request #503: Ikresic MM-5072 android tests update mockito to latest version
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-5072-android-tests-update-mockito-to-latest-version to master

Squashed commit of the following:

commit d334c5043a19dafd7ee9c63ac873cfd2be997e2c
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Thu Jun 5 16:11:21 2025 +0200

    - added comment

commit e0eb443efa39c376b5a2e58b1bbbbfc000795bfc
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Thu Jun 5 16:06:48 2025 +0200

    - remmove line

commit 18e797917540eedb6fb482ad7c72b47ac9db67f2
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Thu Jun 5 14:35:00 2025 +0200

    - test passing

commit affbd9d83bb771ea18e89ae8f24137528bad71de
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Tue Jun 3 14:56:30 2025 +0200

    - updated timeout on depersonalize() test

commit 8b44abfa857435200bbfd9fc2105e8920586d885
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Tue Jun 3 14:36:21 2025 +0200

    - reverted test conditions

commit 29c19d662e08f1bbb37952f651a6d797c83bd54b
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Tue Jun 3 10:23:57 2025 +0200

    - removed ignored test

commit 55b0454e9262f7428f353c13e9ac719c9d7100df
Merge: fe701579 f4507ff5
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Mon Jun 2 14:21:38 2025 +0200

    Merge branch 'master' into ikresic-MM-5072-android-tests-update-mockito-to-latest-version
    
    # Conflicts:
    #	infobip-mobile-messaging-android-sdk/src/androidTest/java/org/infobip/mobile/messaging/interactive/inapp/InAppNotificationHandlerImplTest.java

commit fe701579246876c5214535e697ef1f95118290d2
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Mon Jun 2 14:00:13 2025 +0200

    - removed ignores

commit 9782fa9b46f787dee591a912640663348ba41a9a
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Mon Jun 2 13:51:03 2025 +0200

    - provided fixes for failing test cases

commit cef2c2a46a8e0b953ea90d13b05

--- a/infobip-mobile-messaging-android-test/build.gradle
+++ b/infobip-mobile-messaging-android-test/build.gradle
@@ -46,9 +46,7 @@ dependencies {
 
     implementation "androidx.test.ext:junit:$mm_androidJunitVersion"
     implementation "androidx.test:runner:$mm_androidTestRunnerVersion"
-    implementation "com.crittercism.dexmaker:dexmaker-dx:1.4"
-    implementation "com.crittercism.dexmaker:dexmaker:1.4"
-    implementation "com.crittercism.dexmaker:dexmaker-mockito:1.4"
+    implementation "com.linkedin.dexmaker:dexmaker-mockito-inline:2.28.3"
     implementation "org.mockito:mockito-core:$mm_mockitoCoreVersion"
     implementation "junit:junit:$mm_junitVersion"
     api('org.skyscreamer:jsonassert:1.5.0') {
