Pull request #508: Jdzubak MCA-4780 inappchat sync action
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4780-inappchat-sync-action to master

Squashed commit of the following:

commit 806df954a65c88a54ce96c8eb4759e4ea2c385d0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 11:01:18 2025 +0200

    MCA-4780 InAppChat sync actions

commit 73c08ac4085ae9fe89abb2c2ee709bb5ab1e08f7
Author: Alexander Boldyrev <Alexander.Boldyrev@infobip.com>
Date:   Tue Jun 17 08:59:57 2025 +0000

    Applied suggestion

commit 5176db4caa6f592e98f6557bdf29977b31b92577
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 08:31:24 2025 +0200

    MCA-4780 InAppChat sync actions

commit 410b8ed6b495ae14544605cd5c10162af1941ec0
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 08:25:46 2025 +0200

    MCA-4780 InAppChat sync actions

commit 33d3ff30fb39be1067cdcef02e9388ca68d4f061
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 07:23:51 2025 +0200

    MCA-4780 InAppChat sync actions

commit 9ec298201384a58834ba2056e62d8b61f90bccf5
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Tue Jun 17 07:22:03 2025 +0200

    MCA-4780 InAppChat sync actions

commit c0ca7fba00391a0aeae5a6bbb104d100eb32b8d4
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jun 16 16:32:11 2025 +0200

    MCA-4780 InAppChat sync actions

commit 9fe234177c5d6391a225dc80af33803192cdce7a
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Mon Jun 16 16:32:10 2025 +0200

    Rename .java to .kt

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/AndroidManifest.xml
@@ -36,6 +36,14 @@
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name=".core.PushRegistrationBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="org.infobip.mobile.messaging.REGISTRATION_CREATED" />
+            </intent-filter>
+        </receiver>
+
         <meta-data
             android:name="org.infobip.mobile.messaging.chat.InAppChatImpl"
             android:value="org.infobip.mobile.messaging.MessageHandlerModule" />
