Pull request #513: MM-7412 New Maven Central repository
Merge in MML/infobip-mobile-messaging-android from jdzubak-MM-7410-maven-central-repo to master

Squashed commit of the following:

commit c96a8a941438ccf5434ebf19fb362c3108cbf32e
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Jul 2 15:48:34 2025 +0200

    MM-7412 New Maven Central repository

--- a/publish-mavencentral.gradle
+++ b/publish-mavencentral.gradle
@@ -54,8 +54,8 @@ afterEvaluate {
         }
 //    repositories {
 //        maven {
-//            name = "SonatypeReleases"
-//            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+//            name = "ossrh-staging-api"
+//            url = "https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/"
 //
 //            credentials {
 //                username ossrhUsername
