Pull request #514: Pull request #498: - updated android SDK to Android API 36
Merge in MML/infobip-mobile-messaging-android from ikresic-MM-7251-android-16-support to master

Squashed commit of the following:

commit 9d1959f34440dbe1bb5be7babbecf5f56aa9b47b
Merge: 2b6728c0 0bd9af1c
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Thu Jul 3 17:01:59 2025 +0200

    Merge branch 'master' into ikresic-MM-7251-android-16-support

commit 2b6728c0bdaf103b1ad56d03433b7ea71e2e6e49
Merge: 8688d845 fdc36674
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Thu Jul 3 16:58:39 2025 +0200

    Merge branch 'refs/heads/ikresic-MM-5072-android-tests-update-mockito-to-latest-version' into ikresic-MM-7251-android-16-support

commit 8688d8455d0dcd781a51e32e8a1450d45146b0f1
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Thu Jul 3 16:24:58 2025 +0200

    . removed job service binder from Manifest

commit fdc36674c22c25e072dda05fb8109dbe5cb22aed
Author: Ivan Kresic <ivan.kresic@infobip.com>
Date:   Mon Jun 9 15:31:30 2025 +0200

    - fixed test broken on Android 16

commit 11480b0444ba14b026b42d700967ec44e568829e
Author: Ivan Krešić <Ivan.Kresic@infobip.com>
Date:   Tue May 20 12:54:53 2025 +0000

    Pull request #498: - updated android SDK to Android API 36
    
    Merge in MML/infobip-mobile-messaging-android from ikresic-MM-7251-android-update-sdk-to-support-android-16 to ikresic-MM-7251-android-16-support
    
    Squashed commit of the following:
    
    commit b78a2e5d0dfbd80e0a097c8af58fc5527bbb452b
    Author: ikresic <ivan.kresic@infobip.com>
    Date:   Mon May 12 16:35:19 2025 +0200
    
        - updated android SDK to Android API 36

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     //Kotlin-Gradle-AGP compatibility matrix https://kotlinlang.org/docs/gradle-configure-project.html#apply-the-plugin
     ext.mm_kotlinVersion = "2.0.21"
-    ext.mm_gradlePluginVersion = "8.5.2"
+    ext.mm_gradlePluginVersion = '8.9.0'
     ext.mm_desugarJdkVersion = "2.1.4"
 
     repositories {
@@ -25,9 +25,9 @@ plugins {
 
 ext {
     mm_minSdkVersion = 21
-    mm_compileSdkVersion = 35
-    mm_targetSdkVersion = 35
-    mm_buildToolsVersion = "35.0.0"
+    mm_compileSdkVersion = 36
+    mm_targetSdkVersion = 36
+    mm_buildToolsVersion = "36.0.0"
     mm_firebaseMessagingVersion = "22.0.0"
     mm_gmsLocationVersion = "21.0.1"
     mm_constraintLayoutVersion = "2.1.4"
