Pull request #518: Jdzubak MCA-4801 rtc ui proguard rules
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-4801-rtc-ui-proguard-rules to master

Squashed commit of the following:

commit 1f58903808c50be98177b38eda32741a62abd62f
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Jul 30 13:39:33 2025 +0200

    MCA-4801 latest WebRTC version, proguard-rules improved

commit f3a5eeb8ac2873457de5f86cd6c51cfa31e8ecc5
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Wed Jul 30 13:39:13 2025 +0200

    MCA-4801 latest WebRTC version, proguard-rules improved

--- a/infobip-rtc-ui/build.gradle
+++ b/infobip-rtc-ui/build.gradle
@@ -36,7 +36,7 @@ android {
         // https://issuetracker.google.com/issues/154275579
         buildConfigField "String", "VERSION_NAME", "\"$versionName\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "proguard-rules.pro"
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     buildFeatures {
@@ -86,7 +86,7 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.10.1"
     implementation "com.google.android.material:material:$mm_materialVersion"
 
-    api ("com.infobip:infobip-rtc:2.5.8") {
+    api ("com.infobip:infobip-rtc:2.5.19") {
         transitive = true
     }
 
