--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,4 @@ android.enableJetifier=true
 android.nonFinalResIds=false
 org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 android.suppressUnsupportedCompileSdk=35
+android.enableR8.fullMode=true
