--- a/infobip-mobile-messaging-android-demo/src/inbox/AndroidManifest.xml
+++ b/infobip-mobile-messaging-android-demo/src/inbox/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <application>
         <activity
             android:name=".InboxActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
