--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -97,11 +97,12 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$mm_kotlinVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$mm_coroutinesVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$mm_lifecycleVersion"
 
     implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
     implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
     implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
-    implementation 'androidx.exifinterface:exifinterface:1.3.7'
+    implementation 'androidx.exifinterface:exifinterface:1.4.1'
     implementation "com.google.android.material:material:$mm_materialVersion"
 
     testImplementation project(":infobip-mobile-messaging-android-test")
