Pull request #545: Jdzubak CHAT-3774 missing dependency
Merge in MML/infobip-mobile-messaging-android from jdzubak-CHAT-3774-missing-dependency to master

Squashed commit of the following:

commit ac37887e64a1a68cc5a0c5e7cf9773241f458d6d
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Nov 13 14:41:20 2025 +0100

    CHAT-3774 Safe draft sender

commit b882753bfce478c4af44de3a55c8673bff8d6605
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Nov 13 14:37:26 2025 +0100

    CHAT-3774 Demo app dependencies cleanup

commit 855b8fb33a91d980d4b685fa8aa741e48b5294e5
Author: Jakub Dzubak <Jakub.Dzubak@infobip.com>
Date:   Thu Nov 13 14:30:27 2025 +0100

    MCA-5087 InAppChatView visibility issue after first sync

--- a/infobip-mobile-messaging-android-chat-sdk/build.gradle
+++ b/infobip-mobile-messaging-android-chat-sdk/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$mm_coreKtxVersion"
     implementation "androidx.constraintlayout:constraintlayout:$mm_constraintLayoutVersion"
     implementation "androidx.appcompat:appcompat:$mm_appCompatVersion"
+    implementation "androidx.activity:activity-ktx:$mm_activityVersion"
     implementation 'androidx.exifinterface:exifinterface:1.4.1'
     implementation "com.google.android.material:material:$mm_materialVersion"
 
