--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ ext {
     mm_gmsLocationVersion = "21.0.1"
     mm_constraintLayoutVersion = "2.2.1"
     mm_appCompatVersion = "1.7.1"
-    mm_materialVersion = "1.12.0"
+    mm_activityVersion = "1.11.0"
+    mm_materialVersion = "1.13.0"
     mm_coreKtxVersion = "1.10.1"
     mm_lifecycleVersion = "2.9.3"
     mm_junitVersion = "4.13.2"
